--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@ant-design/icons": "^5.5.1",
-        "@reduxjs/toolkit": "^2.3.0",
-        "antd": "^5.21.5",
+        "@ant-design/icons": "^5.6.1",
+        "@reduxjs/toolkit": "^2.6.1",
+        "antd": "^5.24.5",
         "dayjs": "^1.11.13",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-redux": "^9.1.2",
-        "react-router-dom": "^6.27.0"
+        "react-redux": "^9.2.0",
+        "react-router-dom": "^6.30.0"
     },
     "devDependencies": {
-        "@types/node": "^22.7.7",
-        "@types/react": "^18.3.11",
-        "@types/react-dom": "^18.3.1",
+        "@types/node": "^22.13.13",
+        "@types/react": "^18.3.20",
+        "@types/react-dom": "^18.3.5",
         "@typescript-eslint/eslint-plugin": "^5.62.0",
         "@typescript-eslint/parser": "^5.62.0",
-        "@vitejs/plugin-react-swc": "^3.7.1",
+        "@vitejs/plugin-react-swc": "^3.8.1",
         "eslint": "^8.57.1",
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.3.5",
-        "sass": "^1.80.3",
-        "typescript": "^5.6.3",
-        "vite": "^5.4.9"
-    }
+        "sass": "^1.86.0",
+        "typescript": "^5.8.2",
+        "vite": "^5.4.15"
+    },
+    "packageManager": "pnpm@9.15.0+sha512.76e2379760a4328ec4415815bcd6628dee727af3779aaa4c914e3944156c4299921a89f976381ee107d41f12cfa4b66681ca9c718f0668fa0831ed4c6d8ba56c"
 }
